Fix width of figures/embeds on mobile breakpoints

--- a/ArticleTemplates/css/scss/partials/_figure.scss
+++ b/ArticleTemplates/css/scss/partials/_figure.scss
@@ -1,4 +1,6 @@
 figure {
+	outline: 2px solid blue;
+	
 	img {
 		display: block;
 	}
