--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -865,17 +865,17 @@ ul.tabs {
   width: 100%; }
 
 .element-video {
+  background-color: #000;
   padding-bottom: 56.25%;
   width: 100%;
   position: relative;
   overflow: hidden; }
   .element-video iframe, .element-video object, .element-video embed, .element-video video {
-    background-color: #000;
     width: 100%;
     height: 100%;
+    position: absolute;
     top: 0;
-    left: 0;
-    position: absolute; }
+    left: 0; }
 
 .element-placeholder {
   width: 100%; }
@@ -907,8 +907,8 @@ ul.tabs {
   overflow: hidden; }
   .element-image__inner img,
   .element-placeholder__inner img {
-    position: absolute;
     width: 100%;
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
@@ -959,52 +959,54 @@ ul.tabs {
   .element-comment .d2-badge {
     display: none; }
 
-figure img {
-  display: block; }
-figure video {
-  width: 100%; }
-figure figcaption {
-  color: #666666;
-  font-family: "Agate Sans", sans-serif;
-  border-bottom: 1px dotted #dcdad5;
-  padding: 6px 0px 24px 0px; }
-  @media all and (max-width: 40.615em) {
-    figure figcaption {
-      font-size: 1.4rem;
-      line-height: 2rem; } }
-  @media all and (min-width: 40.625em) {
-    figure figcaption {
-      font-size: 1.6rem;
-      line-height: 2.2rem; } }
-  @media all and (min-width: 40.625em) and (max-width: 56.24em) {
-    figure figcaption {
-      padding-right: 23.94366%; } }
-  @media all and (min-width: 56.25em) {
-    figure figcaption {
-      padding-right: 24.21053%; } }
-figure.figure-wide img {
-  width: 100%;
-  height: auto; }
-figure.figure-wide figcaption {
-  padding: 6px 12px 24px 12px; }
-figure.figure-inline {
-  margin: 12px 0px 12px 0px; }
-  @media all and (max-width: 28.115em) {
-    figure.figure-inline img {
-      width: 100%;
-      height: auto; } }
-  @media all and (min-width: 28.125em) {
-    figure.figure-inline {
-      float: left; } }
-  @media all and (min-width: 28.125em) and (max-width: 40.615em) {
-    figure.figure-inline {
-      margin-right: 4.25532%; } }
-  @media all and (min-width: 40.625em) and (max-width: 56.24em) {
-    figure.figure-inline {
-      margin-right: 2.8169%; } }
-  @media all and (min-width: 56.25em) {
-    figure.figure-inline {
-      margin-right: 2.10526%; } }
+figure {
+  outline: 2px solid blue; }
+  figure img {
+    display: block; }
+  figure video {
+    width: 100%; }
+  figure figcaption {
+    color: #666666;
+    font-family: "Agate Sans", sans-serif;
+    border-bottom: 1px dotted #dcdad5;
+    padding: 6px 0px 24px 0px; }
+    @media all and (max-width: 40.615em) {
+      figure figcaption {
+        font-size: 1.4rem;
+        line-height: 2rem; } }
+    @media all and (min-width: 40.625em) {
+      figure figcaption {
+        font-size: 1.6rem;
+        line-height: 2.2rem; } }
+    @media all and (min-width: 40.625em) and (max-width: 56.24em) {
+      figure figcaption {
+        padding-right: 23.94366%; } }
+    @media all and (min-width: 56.25em) {
+      figure figcaption {
+        padding-right: 24.21053%; } }
+  figure.figure-wide img {
+    width: 100%;
+    height: auto; }
+  figure.figure-wide figcaption {
+    padding: 6px 12px 24px 12px; }
+  figure.figure-inline {
+    margin: 12px 0px 12px 0px; }
+    @media all and (max-width: 28.115em) {
+      figure.figure-inline img {
+        width: 100%;
+        height: auto; } }
+    @media all and (min-width: 28.125em) {
+      figure.figure-inline {
+        float: left; } }
+    @media all and (min-width: 28.125em) and (max-width: 40.615em) {
+      figure.figure-inline {
+        margin-right: 4.25532%; } }
+    @media all and (min-width: 40.625em) and (max-width: 56.24em) {
+      figure.figure-inline {
+        margin-right: 2.8169%; } }
+    @media all and (min-width: 56.25em) {
+      figure.figure-inline {
+        margin-right: 2.10526%; } }
 
 .football__header {
   background-color: white; }
@@ -2907,22 +2909,14 @@ aside {
   #standard-article .article__body .element-video,
   #standard-article .article__body .element-placeholder,
   #standard-article .article__body .element-interactive {
-    margin: 12px -12px 12px -12px; }
-    @media all and (max-width: 40.615em) {
-      #standard-article .article__body .figure-wide,
-      #standard-article .article__body .element-video,
-      #standard-article .article__body .element-placeholder,
-      #standard-article .article__body .element-interactive {
-        width: 110%; } }
+    margin: 12px -12px 12px -12px;
+    width: auto; }
     @media all and (min-width: 40.625em) {
       #standard-article .article__body .figure-wide,
       #standard-article .article__body .element-video,
       #standard-article .article__body .element-placeholder,
       #standard-article .article__body .element-interactive {
         width: 134%; } }
-  @media all and (max-width: 40.615em) {
-    #standard-article .article__body .element-video {
-      padding-bottom: 61.875%; } }
   @media all and (min-width: 40.625em) {
     #standard-article .article__body .element-video {
       padding-bottom: 75.375%; } }
